--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,45 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
-jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+# name: Deploy to S3 and CloudFront
+# run-name: 
+# on:
+    # push:
+        # branches: 
+          # - 'main'
+# jobs:
+  # build:
+    # runs-on: ubuntu-latest
+    # environment: staging
+    # steps:
+      # - run: ${{ github.actor }} triggered event GitHub Actions 🚀
+      # - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      # - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+
+      # - name: Check out repository code
+        # uses: actions/checkout@v3
+
+      # - name: Set enviroments
+        # uses: actions/setup-node@v3
+        # with:
+          # node-version: '14.17.0'
+
+      # - name: Configure AWS Credentials
+        # uses: aws-actions/configure-aws-credentials@v2
+        # with:
+            # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            # aws-region: ap-northeast-1
+            
+      # - name: Install depedencies
+        # run: npm install
+
+      # - name: Build static file
+        # run: npm build
+
+      # - name: Clean file s3
+        # run: |
+            # aws s3 rm s3://${{ secrets.BUCKET_NAME }} --recursive
+
+      # - name: Copy file to s3
+        # run: |
+            # aws s3 sync ${{ github.workspace }}/build/static s3://${{ secrets.BUCKET_NAME }}
+
+      # - run: echo "🍏 This job's status is ${{ job.status }}."
