--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -25,4 +25,23 @@ jobs:
     name: DEPLOY INFRASTRUCTURE
     environment:  "terraform-${{ github.event.inputs.environment }}"
     steps:
-      - run: echo "🔎 The name of your branch is github.ref_name and your repository is ${{ github.repository }}."
+      - run: echo "🔎 The name of your branch is ${{ github.ref_name }} and your repository is ${{ github.repository }}."
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets['AWS_ACCESS_KEY_ID'] }}
+          aws-secret-access-key: ${{ secrets['AWS_SECRET_ACCESS_KEY'] }}
+          aws-region: ap-southeast-1
+
+      - name: Download credentials file from s3
+        run: |
+          cd aws-infra
+          aws s3 ls s3://anycha-terraform-staging-test/terraform/terraform.tfstate .
+
+      - name: Check file
+        run: |
+          ls ${{ github.workspace }}
