--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref_name }} and your repository is ${{ github.repository }}."
       - run: echo $GITHUB_REF_NAME
       - run: echo $GITHUB_WORKSPACE
-      - run: echo ${{ vars.KHANHTRUNG }}
+      - run: echo ${{ vars.KHANHTRUNG }} && echo $KHANHTRUNG
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -53,6 +53,6 @@ jobs:
 
       - name: Check file
         run: |
-          ls ${{ github.workspace }}/aws-infra
-          sudo apt-get update && sudo apt-get install -y tree
-          tree ${{ github.workspace }}/
+          ls $GITHUB_WORKSPACE/aws-infra
+          sudo apt-get install -y tree
+          tree $GITHUB_WORKSPACE/
