--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -31,10 +31,9 @@ jobs:
     name: DEPLOY INFRASTRUCTURE
     environment:  "terraform-${{ github.event.inputs.environment }}"
     steps:
-      - run: echo "🔎 The name of your branch is ${{ github.ref_name }} and your repository is ${{ github.repository }}."
-      - run: echo $GITHUB_REF_NAME
-      - run: echo $GITHUB_WORKSPACE
-      - run: echo ${{ vars.KHANHTRUNG }} && echo $KHANHTRUNG
+      - run: echo "$GITHUB_REF_NAME == ${{ github.ref_name }}"
+      - run: echo "$GITHUB_WORKSPACE == ${{ github.workspace }}"
+      - run: echo ${{ vars.KHANHTRUNG != $KHANHTRUNG}}
 
       - name: Checkout
         uses: actions/checkout@v3
