--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -55,3 +55,4 @@ jobs:
           ls $GITHUB_WORKSPACE/aws-infra
           sudo apt-get install -y tree
           tree $GITHUB_WORKSPACE/
+          echo "finish"
