--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -31,9 +31,9 @@ jobs:
     name: DEPLOY INFRASTRUCTURE
     environment:  "terraform-${{ github.event.inputs.environment }}"
     steps:
-      - run: echo "$GITHUB_REF_NAME == ${{ github.ref_name }}"
-      - run: echo "$GITHUB_WORKSPACE == ${{ github.workspace }}"
-      - run: echo "${{ vars.KHANHTRUNG }} != $KHANHTRUNG"
+#      - run: echo "$GITHUB_REF_NAME == ${{ github.ref_name }}"
+#      - run: echo "$GITHUB_WORKSPACE == ${{ github.workspace }}"
+#      - run: echo "${{ vars.KHANHTRUNG }} != $KHANHTRUNG"
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -55,4 +55,4 @@ jobs:
           ls $GITHUB_WORKSPACE/aws-infra
           sudo apt-get install -y tree
           tree $GITHUB_WORKSPACE/
-          echo "finish"
+          echo "Khanh trung dep trai"
